--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     }
   },
 
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/testHooks/UseTestHook.test.js"],
   "exclude": ["node_modules", "src/**/*.test.js"]
 }
