ci: updated eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,12 @@
     "next",
     "next/core-web-vitals",
     "eslint:recommended",
-    "plugin:storybook/recommended"
+    "plugin:storybook/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "root": true,
   "globals": {
     "React": "readonly"
   },
