--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "autoprefixer": "^10.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
@@ -48,7 +50,7 @@
     "storybook": "^7.6.6",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "webpack": "^5"
