--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     }
   },
 
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/testHooks/UseTestHook.test.js", "src/lib/hooks/useMeditationTimer.test.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/testHooks/UseTestHook.test.js", "src/lib/hooks/useMeditationTimer.test.js",".eslintrc.json"],
   "exclude": ["node_modules", "src/**/*.test.js"]
 }
