--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "storybook": "^7.6.7",
+    "storybook-react-context": "^0.6.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
