--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "ffi-napi": "^4.0.3",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ref-napi": "^3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
