--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint && npx tsc --noEmit",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "ffi-napi": "^4.0.3",
@@ -31,9 +29,8 @@
     "@storybook/nextjs": "^7.6.7",
     "@storybook/react": "^7.6.7",
     "@storybook/test": "^7.6.7",
-    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -46,8 +43,6 @@
     "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "storybook": "^7.6.7",
     "storybook-react-context": "^0.6.0",
@@ -57,5 +52,9 @@
   },
   "resolutions": {
     "webpack": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "commitlint.config.js",
+  "author": "",
+  "license": "ISC"
 }
