--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "ref-napi": "^3.0.3"
+    "ref-napi": "^3.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
