--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "ffi-napi": "^4.0.3",
-    "next": "14.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "ref-napi": "^3.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "ref-napi": "^3.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
